gcc/testsuite/gdc.test/compilable/b15428.d
class A
{
    this() {}
}

class B : A
{
    this()
    {
        static if (__traits(compiles, super()))
            super();
    }
}
