gcc/testsuite/gdc.test/fail_compilation/fail3581a.d

class A { void f() {} }
class B : A { static override void f() {}; }

void main() {}
